--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        visuiVersion = '1.4.0'
     }
 
     repositories {
@@ -79,6 +80,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        compile "com.kotcrab.vis:vis-ui:$visuiVersion"
         
     }
 }
