--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         
 
     }
@@ -27,6 +27,12 @@ allprojects {
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
         visuiVersion = '1.4.0'
+        gms_library_version = '10.2.1'
+        appcompat_library_version = '25.3.1'
+        support_library_version = '25.3.1'
+        build_tools_version = '25.0.2'
+        android_compile_version = 25
+        android_min_version = 19
     }
 
     repositories {
@@ -69,7 +75,8 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
-        
+        compile fileTree(dir: '../libs', include: '*.jar')
+
     }
 }
 
@@ -81,6 +88,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
+        compile fileTree(dir: '../libs', include: '*.jar')
         
     }
 }
