--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,14 @@ buildscript {
         mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.15"
         
 
     }
@@ -82,12 +86,15 @@ project(":android") {
 
 project(":core") {
     apply plugin: "java"
+    apply plugin: "net.ltgt.apt"
 
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
+        compile 'com.google.dagger:dagger:2.9'
+        apt 'com.google.dagger:dagger-compiler:2.9'
         compile fileTree(dir: '../libs', include: '*.jar')
         
     }
