--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
-        classpath "net.ltgt.gradle:gradle-apt-plugin:0.15"
-        
-
     }
 }
 
@@ -35,12 +32,6 @@ allprojects {
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
         visuiVersion = '1.4.0'
-        gms_library_version = '10.2.1'
-        appcompat_library_version = '25.3.1'
-        support_library_version = '25.3.1'
-        build_tools_version = '25.0.2'
-        android_compile_version = 25
-        android_min_version = 19
     }
 
     repositories {
@@ -75,6 +66,7 @@ project(":android") {
 
     dependencies {
         compile project(":core")
+        compile project(":BaseGameUtils")
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
@@ -88,6 +80,8 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
 
+        compile files('../libs/App42MultiPlayerGamingSDK.jar')
+        compile files('../libs/json-org.jar')
         compile fileTree(dir: '../libs', include: '*.jar')
 
     }
@@ -95,16 +89,16 @@ project(":android") {
 
 project(":core") {
     apply plugin: "java"
-    apply plugin: "net.ltgt.apt"
 
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
-        compile 'com.google.dagger:dagger:2.9'
-        apt 'com.google.dagger:dagger-compiler:2.9'
         compile "org.mini2Dx:universal-tween-engine:6.3.3"
+
+        compile files('../libs/App42MultiPlayerGamingSDK.jar')
+        compile files('../libs/json-org.jar')
         compile fileTree(dir: '../libs', include: '*.jar')
 
     }
