--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+
+        compile 'com.google.code.gson:gson:2.8.2'
         
     }
 }
@@ -80,6 +82,8 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
 
+        compile 'com.google.code.gson:gson:2.8.2'
+
         compile files('../libs/App42MultiPlayerGamingSDK.jar')
         compile files('../libs/json-org.jar')
         compile fileTree(dir: '../libs', include: '*.jar')
@@ -96,6 +100,8 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
         compile "org.mini2Dx:universal-tween-engine:6.3.3"
+
+        compile 'com.google.code.gson:gson:2.8.2'
 
         compile files('../libs/App42MultiPlayerGamingSDK.jar')
         compile files('../libs/json-org.jar')
